// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostgreSqlAdapter > configuration > connection > database > throws an error when database is empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "connection",
      "database"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > database > throws an error when database is not provided 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "connection",
      "database"
    ],
    "message": "Required"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > host > throws an error when host is empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "connection",
      "host"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > host > throws an error when host is not provided 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "connection",
      "host"
    ],
    "message": "Required"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > password > throws an error when password is empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "connection",
      "password"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > password > throws an error when password is not provided 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "connection",
      "password"
    ],
    "message": "Required"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > port number > throws an error when port is not a number 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [
      "connection",
      "port"
    ],
    "message": "Expected number, received string"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > user > throws an error when user is empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "connection",
      "user"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > connection > user > throws an error when user is not provided 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "connection",
      "user"
    ],
    "message": "Required"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > extraColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "table",
      "extraColumnName"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > extraColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "extraColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > keyColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "table",
      "keyColumnName"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > keyColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "keyColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > tableName > should throw if empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "table",
      "tableName"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > tableName > should throw if not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "tableName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > valueColumnName > should throw if empty 1`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": [
      "table",
      "valueColumnName"
    ]
  }
]]
`;

exports[`PostgreSqlAdapter > configuration > table > valueColumnName > should throw if not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "valueColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;
